classDiagram
    class Exception {
<<java.lang>>
}

class RuntimeException {
<<java.lang>>
}

class DecimalPointException {
+DecimalPointException(String)
}

class EmptyInputException {
+EmptyInputException(String)
}

class ExceedCharCountException {
+ExceedCharCountException(String)
}

class IndexExceedLimitException {
+IndexExceedLimitException(String)
}

class NegativeNumberException {
+NegativeNumberException(String)
}

Exception <|-- RuntimeException : extends
RuntimeException <|-- DecimalPointException : extends
RuntimeException <|-- EmptyInputException : extends
RuntimeException <|-- ExceedCharCountException : extends
RuntimeException <|-- IndexExceedLimitException : extends
RuntimeException <|-- NegativeNumberException : extends